<resources>
    <string name="app_name">Term Tracker</string>
    <string name="notifications_channel">notifications_channel</string>
    <string name="channel_description">channel_description</string>

    <string name="curr_term">Current Term</string>
    <string name="all_terms">All Terms</string>
    <string name="no_curr_term_err">No Current Term Available</string>
    <string name="term_not_found_err">Term was not found</string>

    <string name="txt_title">Title</string>
    <string name="txt_start">Start Date</string>
    <string name="txt_end">End Date</string>
    <string name="txt_active">Current</string>

    <string name="add_new">Add New</string>

    <string name="assessments">Assessments</string>
    <string name="courses">Courses</string>
    <string name="update_term">Update Term</string>
    <string name="new_term">New Term</string>

    <string name="enable_alerts">Enable Alerts</string>
    <string name="notes">Notes</string>

    <string name="date_format">MM/DD/YYYY</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <string-array name="course_statuses">
        <item>Plan to take</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>

    <string-array name="assessment_types">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
</resources>
