<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_header"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Title"/>
        <EditText
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="ex. C196 Mobile Application Development"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Start Date"/>
        <com.jbluehdorn.termtracker.widgets.DateText
            android:id="@+id/date_start"
            android:hint="@string/date_format"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="End Date"/>
        <com.jbluehdorn.termtracker.widgets.DateText
            android:id="@+id/date_end"
            android:hint="@string/date_format"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Status"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spin_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:entries="@array/course_statuses">
        </android.support.v7.widget.AppCompatSpinner>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mentor"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/txt_mentor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:hint="ex. Dan Smith"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textSize="15sp"/>
                <com.jbluehdorn.termtracker.widgets.PhoneText
                    android:id="@+id/txt_mentor_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="ex. (555)555-1234"
                    android:textSize="12sp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/txt_mentor_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:inputType="textEmailAddress"
                    android:hint="ex. smithd@my.wgu.edu"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_marginEnd="5dp"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/save"/>
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>